# app/api/urls.py
@@ -1,3 +1,4 @@
+from rest_framework.authtoken import views
 from django.urls import path, include
 from rest_framework import routers
 from api.country.views import CountryViewSet
@@ -11,4 +12,5 @@ router.register(r'languages', LanguageViewSet, 'languages')
 
 urlpatterns = [
     path('', include(router.urls)),
+    path('api-token-auth/', views.obtain_auth_token)
 ]
